updates manchester swep

--- a/src/pages/manchester/severe-weather-accommodation/index.hbs
+++ b/src/pages/manchester/severe-weather-accommodation/index.hbs
@@ -28,20 +28,11 @@ location: manchester
     <div class="block__content">
       <p>During periods of severe cold weather, additional emergency accommodation is provided by councils.</p>
 
-      <p>Adverse weather provision is provided when the weather is forecast to be sub zero. At this point the usual
-        guidelines over who the council has a duty to provide emergency accommodations for are lifted, and extra
-        provision is made for rough sleepers, regardless of their status.</p>
+      <p>The Met Office predicts night-time temperatures are going to drop below zero degrees overnight for a period of three consecutive hours between the hours of 9pm and 6am.</p>
+      <p>OR</p>
+      <p>The Met Office issue a red weather warning alert and there is a risk to life.
+</p>
 
-      <p>This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater
-        Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
-
-      <p>A triage and referral hub will be facilitated at the following locations and times:</p>
-      <ul>
-        <li>The Booth Centre:  Pimblett St, Cheetham Hill, Manchester, M3 1FU.<br>9am to 3pm.</li>
-        <li>Coffee for Craig:  The Meanwhile,153 Great Ducie Street, Manchester, M3 1FB.<br>6pm to 1am. Tel: <a href="tel:07526 625734">07526 625734</a>.</li>
-        <li>Cornerstones Day Centre: 104 Denmark Road, Manchester, M15 6JS.<br>10am to 2:30pm.<br>NB: referrals will be made via telephone to Booth Centre.</li>
-        <p>At all referral venues people will be provided with referral information, welfare items and if, appropriate, allocated accommodation and transport.</p>
-      </ul>
     </div>
   </div>
 </div>
