--- a/src/partials/manchester/aben.hbs
+++ b/src/partials/manchester/aben.hbs
@@ -1,43 +1,18 @@
 <ul>
   <li>
     <p>People who are sleeping rough in Manchester can access A Bed Every Night through a number of
-      different routes. Note that there is a high demand for places in Manchester, and referrals made after
-      7pm are unlikely to be processed until the following day.</p>
+      different routes. Note that there is a high demand for places in Manchester.</p>
     <ul>
       <li>
-        <p>Manchester City Council's rough sleeper team on <a href="tel:01612345339">0161 234 5339</a> Monday - Friday between 9am and 5:30pm.</p>
+        <p>Call Manchester City Council's rough sleeper team on <a href="tel:01612345339">0161 234 5339</a> Monday - Friday between 9am to 4:30pm OR Saturday and Sunday 8am to 3.30pm.</p>
       </li>
       <li>
         <p>Outside these times, the Manchester City Council's out of hours service can be contacted on <a href="tel:01612345001">0161
             234 5001</a>.</p>
       </li>
-      <!--
-      <li><a href="/find-help/organisation/?organisation=barnabus">Barnabus</a> (Monday - Friday 10.30am - 1.00pm /
-        Mon, Tues, Wed, Thurs 7.45pm - 9.00pm)</li>
-      <li><a href="/find-help/organisation/?organisation=booth-centre">Booth Centre</a> (Monday-Friday 9.00am -
-        12.00pm)</li>
-      <li><a href="/find-help/organisation/?organisation=coffee4craig">Coffee4Craig</a> (Monday - Friday 7.00pm -
-        9.00pm / Sat, Sun 5.00pm - 7.00pm)</li>
-      <li><a href="/find-help/organisation/?organisation=lifeshare">Lifeshare</a> (Monday - Friday 10.00am - 5.00pm)</li>
-      <li><a href="/find-help/organisation/?organisation=on-the-out">On the Out</a> (Mon-Fri 12.00pm – 5.00pm)</li>
-      <li><a href="/find-help/organisation/?organisation=shelter">Shelter</a> Mon-Fri 9am-5pm</li>
-      <li><a href="/find-help/organisation/?organisation=reach-out-to-the-community">Reach Out to the Community</a>
-        Mon-Sat 10am-4:30pm</li>
-      <li><a href="https://www.salvationarmy.org.uk/manchester-central">Salvation Army</a> - 71 Grosvenor Street. M13
-        9UB - <a href="tel:01612732081">0161 273 2081</a></li>
-      <li><a href="/find-help/organisation/?organisation=riverside">Riverside</a> </li>
-      <li><a href="/find-help/organisation/?organisation=mental-health-homeless-team">Homeless Mental Health Team</a></li>
-      <li><a href="/find-help/organisation/?organisation=urban-village-medical-practice">Urban Village Medical Practice</a>
-      </li>
-      <li><a href="/find-help/organisation/?organisation=ypsf">Centrepoint</a> </li>
-      <li><a href="/find-help/organisation/?organisation=greater-together-manchester">Greater Together Manchester</a>
-      </li>
-      <li><a href="/find-help/organisation/?organisation=sanctury">Sanctuary</a> </li>
-      <li><a href="/find-help/organisation/?organisation=the-men39s-room">The Men's Room</a> </li>
-      <li><a href="/find-help/organisation/?organisation=cornerstone-day-centre">Cornerstones</a> </li>
-      <li><a href="/find-help/organisation/?organisation=mustard-tree">Mustard Tree</a> </li>
-      -->
     </ul>
+    <li>Alternatively, you can report anyone that appears to be sleeping rough that you're concerned about via <a href="https://thestreetlink.org.uk/">StreetLink</a>.</li>
+  <li>Please call <a href="tel:999">999</a> if someone is unwell or distressed. Don't put yourself in danger or approach someone acting strangely, even to help.</li>
   </li>
   <li>If you have recently been made homeless or are at risk of losing your accommodation please <a href="tel:01612344692">phone
       0161 234 4692</a> or e-mail or <a href="mailto:hpasdutyofficer@manchester.gov.uk">hpasdutyofficer@manchester.gov.uk</a>
