updates chelmsford swep

--- a/src/pages/chelmsford/severe-weather-accommodation/index.hbs
+++ b/src/pages/chelmsford/severe-weather-accommodation/index.hbs
@@ -26,9 +26,12 @@ location: chelmsford
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>Guidelines say that when the temperature drops below zero for 3 consecutive days, however common sense prevails</p>
-      <p>During severe weather, emergency beds are available for rough sleepers. Known rough sleepers (rough sleepers who have been referred through Streetlink) will be offered emergency accommodation once Severe Weather Emergency Protocol (SWEP) is activated. If you are worried about a rough sleeper please refer them through <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
+      <p>If the temperature drops below zero degrees for three consecutive days SWEP will be activated. If advanced warning of severe weather is available it may be activated before this guideline.</p>
+      <p>During severe weather, emergency beds are available for rough sleepers. Known rough sleepers (rough sleepers who have been referred through Streetlink) will be offered emergency accommodation once the Severe Weather Emergency Protocol (SWEP) is activated. Emergency beds will also be offered to those rough sleepers with no recourse to public funds (NRPF).</p>
+      <p>If you are worried about a rough sleeper please refer them through <a href="https://thestreetlink.org.uk/">StreetLink</a>.</p>
+      <p>Chelmsford has a severe lack of temporary accommodation and therefore the emergency beds may be outside of the Chelmsford area, however, wherever possible contacts will be made available for support in those areas for rough sleepers.</p>
       <h2 class="h2">Referral/outreach for SWEP</h2>
+      <p>Please refer through <a href="https://thestreetlink.org.uk">StreetLink</a> in the first instance</p>
       <p class="bold">The CCC Navigation team (Chelmsford County Council)</p>
       <p>The Commissioned CHESS outreach team<br>Website: <a href="https://chesshomeless.org/">https://chesshomeless.org/</a><br>Telephone: <a href="tel:01245 281104">01245 281104</a> Email: <a href="mailto:administration@chesshomeless.org">administration@chesshomeless.org</a>.</p>
 
