updates nottingham swep

--- a/src/pages/nottingham/severe-weather-accommodation/index.hbs
+++ b/src/pages/nottingham/severe-weather-accommodation/index.hbs
@@ -37,7 +37,8 @@ location: nottingham
   <div class="container">
     <div class="block__content">
       <h2 class="h1 best-practice__header">Access Arrangements</h2>
-      <p>When SWEP is in place everyone will be offered a bed regardless of status, local connection or previous bans relating to behaviour. We have a number of emergency  bed spaces across the City and on SWEP evenings teams will be out until 9pm responding to calls from rough sleepers and the public and taking people directly to their accommodation. If you are unable to find somewhere to sleep you can call the Street Outreach Team on <a href="tel:0800 066 5356">0800 066 5356</a> (24 hours a day, free from landlines and mobiles)  If you are approached by someone or have concerns about an individual please also call <a href="tel:0800 066 5356">0800 066 5356</a>. It is not a requirement for people to accept beds and welfare checks and support will continue for such individuals.</p>
+      <p>When SWEP is in place everyone will be offered a bed regardless of status, local connection or previous bans relating to behaviour.</p>
+      <p>If you need help call the Street Outreach Team on <a href="tel:0800 066 5356">0800 066 5356</a>.</p>
     </div>
   </div>
 </div>
