updates liverpool swep

--- a/src/pages/liverpool/severe-weather-accommodation/index.hbs
+++ b/src/pages/liverpool/severe-weather-accommodation/index.hbs
@@ -26,8 +26,10 @@ location: liverpool
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <h1 class="h1">Plans for addressing Rough Sleeping during winter 2022</h1>
-      <p>The purpose of this update is to share the series of proactive measures taken by the City and our partners to address the needs of people who may rough sleep over the winter period.  </p>
+      <h1 class="h1">Plans for addressing Rough Sleeping during winter 2023</h1>
+      <p>If overnight temperatures are predicted to drop to 2 degrees Celsius or below during winter, or in the event of weather such as storms and high winds, we work with local partners to offer a range of support.</p>
+      <p>This support includes food and prescribed medication and is offered through the <a href="https://www.whitechapelcentre.co/uk/">Whitechapel Centre </a>along with any other support service involved in the person’s care. Temporary, shared ‘sit-up’ communal spaces for a small number of people can also be used if demand increases.</p>
+      {{!-- <p>The purpose of this update is to share the series of proactive measures taken by the City and our partners to address the needs of people who may rough sleep over the winter period.  </p>
       <p>This paper will provide an update on our Severe Emergency Weather Proposals (SWEP) for the forthcoming the winter months (defined by government as being from 1st December to 31st March).</p><br>
       <h1 class="h1">Background</h1>
       <ol>
@@ -40,12 +42,12 @@ location: liverpool
         <li>We will monitor demand carefully and seek to provide additional capacity as needed.</li>
         <li>Support, including food and prescribed medication, will be provided to people in hotel settings from our commissioned support services delivered through The Whitechapel Centre and / or The Salvation Army / SAHA. </li>
         <li>Our commissioned temporary accommodation providers have offered capacity through a ‘sit-up’ approach – this is a shared communal space that can be offered during SWEP. This will see a small number of individuals in each setting, in addition to our other offers.  </li>
-      </ol>
+      </ol> --}}
     </div>
   </div>
 </div>
 
-<div class="block block--highlight">
+{{!-- <div class="block block--highlight">
   <div class="container">
     <div class="block__content">
       <h2 class="h1 best-practice__header">If someone is at risk of Rough sleeping</h2>
@@ -60,5 +62,5 @@ location: liverpool
 
     </div>
   </div>
-</div>
+</div> --}}
 {{> social-share}}
