--- a/src/scss/partials/_block.scss
+++ b/src/scss/partials/_block.scss
@@ -676,6 +676,14 @@
     }
   }
 
+  &--derbyshire-charter {
+    padding: 40px 1rem;
+    @include mq($from: m) {
+      max-width: 500px;  // half of $site-container in _variables.scss
+      padding: 40px 30px 40px 40px;
+    }
+  }
+
   &--southampton-charter {
     padding: 40px 1rem;
     @include mq($from: m) {
