--- a/src/scss/partials/_partners.scss
+++ b/src/scss/partials/_partners.scss
@@ -352,6 +352,89 @@
       }
     }
 
+    //derbyshire
+
+    &--amber-valley {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/amber-valley.png);
+      }
+    }
+
+    &--bolsover {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/bolsover.png);
+      }
+    }
+
+    &--chesterfield {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/chesterfield.png);
+      }
+    }
+
+    &--derbyshire-dales {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/derbyshire-dales.png);
+      }
+    }
+
+    &--derbyshire-officers-group {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/derbyshire-officers-group.png);
+      }
+    }
+
+    &--erewash-council{
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/erewash-council.png);
+      }
+    }
+
+    &--hp-borough-council {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/hp-borough-council.png);
+      }
+    }
+
+    &--ne-derbyshire {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/ne-derbyshire.png);
+      }
+    }
+
+    &--south-derbyshire {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/south-derbyshire.png);
+      }
+    }
+
+    &--staffordshire {
+      width: 150px;
+
+      a {
+        background-image: url(/assets/img/derbyshire-logos/staffordshire.png);
+      }
+    }
+
+
     //dudley
 
     &--dudley-council {
