--- a/src/scss/partials/_block-ssn.scss
+++ b/src/scss/partials/_block-ssn.scss
@@ -378,6 +378,60 @@
     }
   }
 
+  &--derbyshire-charter {
+    background: rgba(10, 133, 100, 0.15);
+    display: block;
+    padding: 0!important;
+
+    @include mq($from: m) {
+      display: flex;
+      align-items: stretch;
+    }
+
+    .block__derbyshire-charter {
+      width: 100%;
+      height: 400px;
+      background: white url('/assets/img/header-background.png') right bottom repeat-x;
+
+      @include mq($from: m) {
+        width: 50%;
+      }
+    }
+
+    .block__derbyshire-charter-buildings {
+      height: 100%;
+      width: 100%;
+      position: relative;
+      background: url('/assets/img/locations/derbyshire-small.png') center bottom no-repeat;
+
+      & .content {
+        background: rgba(0, 0, 0, 0.5);
+        color: white;
+        height: 100%;
+        position: absolute;
+        text-align: center;
+        width: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & .title {
+          h1 {
+            border-top: 3px solid #ec6262;
+            border-bottom: 3px solid #ec6262;
+            width: auto;
+            display: inline-block;
+          }
+
+          h2 {
+            margin-top: 0;
+          }
+        }
+      }
+    }
+  }
+
   &--southampton-charter {
     background: rgba(10, 133, 100, 0.15);
     display: block;
