updates manchester christmas map

--- a/src/partials/locations/banners/print-map-banner-mcr.hbs
+++ b/src/partials/locations/banners/print-map-banner-mcr.hbs
@@ -4,10 +4,10 @@
     </div>
   </div>
   <div class="home__copy home__copy--mcr-print-map">
-    <h1>Printable Map of Local Services in Manchester</h1>
-    <p>There's a great new map that's available for FREE that maps emergency support services for those sleeping rough in Manchester.</p>
-    <a class="btn btn--brand-e" href="/manchester/manchester-map.pdf">
-      <span class="btn__text">Download the map now</span>
+    <h1>Christmas and New Year opening times</h1>
+    <p>There's a great new map that's available for FREE that maps and lists the opening times for homelessness services in the city.</p>
+    <a target="_blank" class="btn btn--brand-e" href="/manchester/manchester-xmas-map.png">
+      <span class="btn__text">View the map</span>
     </a>
   </div>
 </div>
