updates chelmsford cost of living doc

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -85,6 +85,10 @@ location: chelmsford
         <li>Website: <a target="_blank" href="https://www.billhelp.uk/grants-help-paying-bills/">https://www.billhelp.uk/grants-help-paying-bills/</a>.</li>
       </ul>
 
+      <h1 class="h1">Essential Living Fund</h1>
+      <p>If you meet the eligibility criteria, live in Essex and are over 16 and find yourself in need of help, the Essential living fund can help pay for heating, electricity, water and food. There is also help to get essential items like a fridge, cooker or washing machine.</p>
+      <p>To apply: <a href="https://www.southend.gov.uk/extra-financial-help/essential-living-fund">https://www.southend.gov.uk/extra-financial-help/essential-living-fund</a>.</p>
+
       <h2 class="h2">Essex Welfare Service</h2>
       <ul>
         <li>Tel: <a href="tel: 0300 3039988">0300 3039988</a>.</li>
