updates notts street aid page

--- a/src/pages/nottingham/street-aid/index.hbs
+++ b/src/pages/nottingham/street-aid/index.hbs
@@ -84,7 +84,7 @@ location: nottingham
     </ul>
     <p>We have been able to draw money to the scheme from the council and businesses, much of which would not otherwise have been spent. This money covers all overheads, so that all the money donated by the public (including Gift Aid) is spent on items for homeless people in Nottingham.</p>
     <h2 class="h2">How can organisations apply to access the fund?</h2>
-    <p>If you represent an organisation that would like to work with Nottingham Street Aid, please download <a href="/nottingham/street-aid/sa-registration-form.docx">the form</a>, fill in the relevant information and send email it to: <a href="mailto:nottingham@streetsupport.net">nottingham@streetsupport.net</a>.</p>
+    <p>The Registration and Application process will open on January 2 2024, when details will appear here.</p>
   </div>
 </div>
 
