updates nottingham streets aid

--- a/src/pages/nottingham/street-aid/index.hbs
+++ b/src/pages/nottingham/street-aid/index.hbs
@@ -84,7 +84,7 @@ location: nottingham
     </ul>
     <p>We have been able to draw money to the scheme from the council and businesses, much of which would not otherwise have been spent. This money covers all overheads, so that all the money donated by the public (including Gift Aid) is spent on items for homeless people in Nottingham.</p>
     <h2 class="h2">How can organisations apply to access the fund?</h2>
-    <p>The Registration and Application process will open on January 2 2024, when details will appear here.</p>
+    <p>The Registration and Application process opens on January 2 2024. Full details can be found on <a href="https://nottinghamstreetaid.net">Nottingham Street Aid</a>.</p>
   </div>
 </div>
 
