reverts christmas timetable banners

--- a/src/pages/manchester/index.hbs
+++ b/src/pages/manchester/index.hbs
@@ -37,7 +37,7 @@ location: manchester
 
 <div id="js-swep-output"></div>
 
-{{> locations/banners/print-map-banner-mcr }}
+{{!-- {{> locations/banners/print-map-banner-mcr }} --}}
 
 <div class="block block--light-highlight">
   <div class="container">
