updates chelmsford rama logo

--- a/src/scss/partials/_partners.scss
+++ b/src/scss/partials/_partners.scss
@@ -308,7 +308,7 @@
       width: 250px;
 
       a {
-        background-image: url(/assets/img/chelmsford-logos/chelmsford-rama.png);
+        background-image: url(/assets/img/chelmsford-logos/chelmsford-rama.jpg);
       }
     }
 
