updates mhp section and hides charter

--- a/src/pages/manchester/manchester-homelessness-partnership/index.hbs
+++ b/src/pages/manchester/manchester-homelessness-partnership/index.hbs
@@ -31,7 +31,7 @@ location: manchester
   <div class="container">
     <div class="block__content">
         <h2>Manchester Homelessness Charter</h2>
-        <p>Manchester Homelessness Partnership formed to work together towards the aims and values of <a href="http://charter.streetsupport.net">Manchester Homelessness Charter</a>.</p>
+        <p>Manchester Homelessness Partnership formed to work together towards the aims and values of <a target="_blank" href="https://mhp.org.uk/charter/">Manchester Homelessness Charter</a>.</p>
         <p>Launched in May 2016, the charter unites many people with personal experience of homelessness with organisations from different sectors, to co-produce solutions together. Over 90 people with lived experience have been involved so far, many of whom were involved in co-writing the charter.</p>
 
         <div class="split__element text-center">
@@ -46,26 +46,15 @@ location: manchester
         </ul>
 
         <h2>Action Groups</h2>
-        <p>At the heart of the work of the partnership are the action groups. You can <a href="https://charter.streetsupport.net/join-action-group/">find out more about the action groups on the charter section</a>.</p>
+        <p>At the heart of the work of the partnership are the action groups. You can <a target="_blank" href="https://mhp.org.uk/action-groups">find out more about the action groups on the MHP website</a>.</p>
         <p>Since the groups were formed, most of the work we do as Street Support is led by what they tell us is needed. We are working on new features that were generated as ideas through co-production in these action groups. This ensures everything we do is needed, and co-designed with those who will be using the new features.</p>
-
-        <h2>Pledges</h2>
-        <p>Another core part of how the charter aims are being met is through pledging. We encourage all organisations and individuals in the city to consider what they could do to support the aims of the charter. You can <a href="https://charter.streetsupport.net/progress/">see existing pledges here</a>, or <a href="https://charter.streetsupport.net/pledge-your-support/">make your own pledge here</a>.</p>
-
-        <h2>Partnership board</h2>
-        <p>There is also a partnership board that has been set up to provide stewardship, and to use its collective influence to remove systemic blockages. The board is a partnership between people with lived experience, public, voluntary and private sectors, and chaired by the Bishop of Manchester. You can <a href="https://charter.streetsupport.net/partnership-board/">find out more about the partnership board here.</a>.</p>
-
-        <h2>The Partnership and Street Support</h2>
-        <p>Street Support has supported the charter mission from the start, and we now sit on the Partnership Driving Group.</p>
-        <p>Our role is to facilitate the network, to help connect people, and to communicate between the partnership and out to others in the city through our website, apps and other channels. We were also asked to design and built the charter section of this website, and to engage the city in the work of the partnership.</p>
 
         <h2>Partnership members</h2>
         <p>Hundreds of organisations and individuals have been involved so far, too many to name individually. Examples include Booth Centre, Mustard Tree, Shelter, Coffee4Craig, Barnabus, Lifeshare, YPSF, Riverside, CityCo, Manchester City Council, GMP, Manchester Uni, MMU and many more.</p>
-        <p>You can <a href="https://charter.streetsupport.net/progress/">see who has pledged here</a>, and <a href="https://streetsupport.net/find-help/all-service-providers/"> see all organisations listed on Street Support here</a>.</p>
         <p>Note that the partnership is a collaboration between many organisations rather than an entity in its own right, and is not owned or funded by the council.</p>
 
         <h2>Find out more</h2>
-        <p>To find out more about Manchester Homelessness Partnership, the charter or Street Support, you can <a href="/about/contact/">contact us</a> and we will connect you to the relevant people in the network.</p>
+        <p>To find out more about Manchester Homelessness Partnership or the charter, you can visit the <a target="_blank" href="https://mhp.org.uk">MHP website</a>.</p>
       </div>
       {{> social-share}}
     </div>
