updates nottingham street aid

--- a/src/pages/nottingham/street-aid/index.hbs
+++ b/src/pages/nottingham/street-aid/index.hbs
@@ -32,6 +32,11 @@ location: nottingham
     <div class="block__content">
       <h2 class="h2">What is Nottingham Street Aid?</h2>
       <p>Nottingham Street Aid is a fund that gives grants to help individuals avoid spending time living on the street.</p>
+      <h2 class="h2">How can organisations apply to access the fund?</h2>
+      <p>The Registration and Application process opens on January 2 2024. Full details can be found on <a href="https://nottinghamstreetaid.net">Nottingham Street Aid</a>.</p>
+      <a class="btn btn--brand-d" target="_blank" href="https://nottinghamstreetaid.net">
+        <span class="btn__text">Apply for funds</span>
+      </a>
       <h2 class="h2">How can the public donate to Nottingham Street Aid?</h2>
       <p>Donations and gift aid from the public will enter the fund through donation contactless points (£3 per donation), Texting STREET plus a number 1-20 to 70560 to donate £1-20 or via our donation web page (reached from a QR code or via this Street Support Nottingham webpage).</p>
       <h2 class="h2">How does Nottingham Street Aid work?</h2>
@@ -83,8 +88,6 @@ location: nottingham
       <li>One part time worker to promote and manage the initiative</li>
     </ul>
     <p>We have been able to draw money to the scheme from the council and businesses, much of which would not otherwise have been spent. This money covers all overheads, so that all the money donated by the public (including Gift Aid) is spent on items for homeless people in Nottingham.</p>
-    <h2 class="h2">How can organisations apply to access the fund?</h2>
-    <p>The Registration and Application process opens on January 2 2024. Full details can be found on <a href="https://nottinghamstreetaid.net">Nottingham Street Aid</a>.</p>
   </div>
 </div>
 
