--- a/src/pages/birmingham/index.hbs
+++ b/src/pages/birmingham/index.hbs
@@ -96,7 +96,7 @@ location: birmingham
     <div class="block__content partners">
       {{> birmingham/supporters }}
       <p>We are looking for businesses and organisations to <a href="/give-help/business-support/">support us</a> so that we can continue to develop this resource.</p>
-      <p>If you share our vision of a society without homelessness, please <a href="mailto:sponsorship@streetsupport.net">get in touch</a>.</p>
+      <p>If you share our vision of a society without homelessness, please <a href="mailto:sponsorship@streetsupport.net">get in touch</a></p>
     </div>
   </div>
 </div>
