out of area support in chelmsford

--- a/src/pages/chelmsford/severe-weather-accommodation/index.hbs
+++ b/src/pages/chelmsford/severe-weather-accommodation/index.hbs
@@ -31,10 +31,19 @@ location: chelmsford
       <p>If you are worried about a rough sleeper please refer them through <a href="https://thestreetlink.org.uk/">StreetLink</a>.</p>
       <p>Chelmsford has a severe lack of temporary accommodation and therefore the emergency beds may be outside of the Chelmsford area, however, wherever possible contacts will be made available for support in those areas for rough sleepers.</p>
       <h2 class="h2">Referral/outreach for SWEP</h2>
-      <p>Please refer through <a href="https://thestreetlink.org.uk">StreetLink</a> in the first instance</p>
+      <p>Please refer through <a href="https://thestreetlink.org.uk">StreetLink</a> in the first instance.</p>
       <p class="bold">The CCC Navigation team (Chelmsford County Council)</p>
       <p>The Commissioned CHESS outreach team<br>Website: <a href="https://chesshomeless.org/">https://chesshomeless.org/</a><br>Telephone: <a href="tel:01245 281104">01245 281104</a> Email: <a href="mailto:administration@chesshomeless.org">administration@chesshomeless.org</a>.</p>
 
+      <h2 class="h2">Out of Area Support</h2>
+      <p>Support is available for those in emergency temporary accommodation across Chelmsford. You can find more details on the support available and where to find them below:</p>
+      <ul>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/harlow-support.pdf">Support in Harlow</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/harlow-map.pdf">Harlow street map</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/southend-support.pdf">Support in Southend</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/southend-map.pdf">Southend street map</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/braintree-support.pdf">Support in Braintree</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/braintree-map.pdf">Braintree street map</a>.</li>
+        <li><a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/stanstead-support.pdf">Support in Stanstead</a> - <a target="_blank" href="/chelmsford/severe-weather-accommodation/out-of-area-support/stanstead-map.pdf">Stanstead street map</a>.</li>
+
+      </ul>
     {{> social-share}}
 
   </div>
