updates cambridgeshire banners

--- a/src/pages/cambridgeshire/index.hbs
+++ b/src/pages/cambridgeshire/index.hbs
@@ -36,15 +36,6 @@ location: cambridgeshire
 
 <div id="js-swep-output"></div>
 
-<div class="cta--money-advice">
-  <div class="container text-center">
-    <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">For local support with the rising cost of living, visit the City Council's dedicated page.</p>
-    <a href="https://www.cambridge.gov.uk/cost-of-living-help" target="_blank" class="btn btn--brand-h">
-      <span class="btn__text">Learn more</span>
-    </a>
-  </div>
-</div>
-
 <div class="block block--light-highlight">
   <div class="container">
     <div class="block__content text-center">
@@ -53,13 +44,22 @@ location: cambridgeshire
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
       <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough ANYWHERE in Cambridgeshire, you can:</p>
-      <p>Contact the Street Outreach Team with details of where the rough sleeper can be found on 01223 366292 from 8am-4pm Mon-Fri.</p>
+      <p>Contact the Street Outreach Team with details of where the rough sleeper can be found on <a href="tel:01223366292">01223 366292</a> from 8am-4pm Mon-Fri.</p>
       <p>Use the Streetlink <a href="https://thestreetlink.org.uk">website</a>.</p>
-      <p>Call the City Council’s Housing Advice Service on <a href="tel:01223 457918">01223 457918</a> 9-5.15pm Mon-Fri or out-of-hours on <a href="tel:0330 053 8109">0330 053 8109</a></p>
+      <p>Call the City Council’s Housing Advice Service on <a href="tel:01223 457918">01223 457918</a> 9-5.15pm Mon-Fri or out-of-hours on <a href="tel:0330 053 8109">0330 053 8109</a>. For further information and help to avoid becoming homeless, and to request help with homelessness, please visit <a href="https://www.cambridge.gov.uk/get-help-to-avoid-becoming-homeless">this website</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/cambridgeshire/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
     </div>
+  </div>
+</div>
+
+<div class="cta--money-advice">
+  <div class="container text-center">
+    <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">For local support with the rising cost of living, visit the City Council's dedicated page.</p>
+    <a href="https://www.cambridge.gov.uk/cost-of-living-help" target="_blank" class="btn btn--brand-h">
+      <span class="btn__text">Learn more</span>
+    </a>
   </div>
 </div>
 
