adds manchester map banner

--- a/src/pages/manchester/index.hbs
+++ b/src/pages/manchester/index.hbs
@@ -37,7 +37,6 @@ location: manchester
 
 <div id="js-swep-output"></div>
 
-{{!-- {{> locations/banners/print-map-banner-mcr }} --}}
 
 <div class="block block--light-highlight">
   <div class="container">
@@ -66,6 +65,8 @@ location: manchester
     </div>
   </div>
 </div>
+
+{{> locations/banners/print-map-banner-mcr }}
 
 <div id="js-statistics-output"></div>
 
