--- a/src/partials/locations/banners/print-map-banner-mcr.hbs
+++ b/src/partials/locations/banners/print-map-banner-mcr.hbs
@@ -4,9 +4,9 @@
     </div>
   </div>
   <div class="home__copy home__copy--mcr-print-map">
-    <h1>Christmas and New Year opening times</h1>
-    <p>There's a great new map that's available for FREE that maps and lists the opening times for homelessness services in the city.</p>
-    <a target="_blank" class="btn btn--brand-e" href="/manchester/manchester-xmas-map.png">
+    <h1>Where to find help in the city</h1>
+    <p>There's a great new map that's available for FREE that maps and lists the opening times for food, healthcare and accommodation in the city.</p>
+    <a target="_blank" class="btn btn--brand-e" href="/manchester/manchester-map.pdf">
       <span class="btn__text">View the map</span>
     </a>
   </div>
