--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -34,11 +34,11 @@ page: team
           </div>
 
           <div class="team-card">
-            <img class="team-card__img" src="/assets/img/mugshots/soraya.jpg" alt="">
-            <h1 class="team-card__heading">Soraya Sheikh</h1>
-            <h2 class="team-card__subheading">Network Manager</h2>
-            <p class="team-card__content">Soraya works alongside Gary connecting and supporting partnerships in our locations, with a focus on harnessing the power of the network nationally by sharing knowledge, activities and best practice.</p>
-            <a href="mailto:soraya@streetsupport.net">Contact Soraya</a>
+            <img class="team-card__img" src="/assets/img/mugshots/yumi.jpg" alt="">
+            <h1 class="team-card__heading">Yumi Lewis</h1>
+            <h2 class="team-card__subheading">Partnerships Manager</h2>
+            <p class="team-card__content">Yumi’s goal is to support our locations across the network to achieve their mission, using the power of local and national partnerships.</p>
+            <a href="mailto:yumi@streetsupport.net">Contact Yumi</a>
           </div>
 
           <div class="team-card">
