fixes gmmc logo and vfg font

--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -127,6 +127,7 @@ $wmht-grey: #515151;
     font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 $font-primary: 'museo_sans_rounded300', sans-serif;
 $font-primary-weight: 300;
 $font-headline: 'museo_sans_rounded500', sans-serif;
