--- a/src/pages/leeds/index.hbs
+++ b/src/pages/leeds/index.hbs
@@ -38,7 +38,7 @@ location: leeds
 
 <div class="cta--money-advice">
   <div class="container text-center">
-    <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">If you or someone you know needs access to food or somewhere warm over the winter period, information can be found in these documents. You can find information on places to keep warm <a target="_blank" style="color: #ffde00; text-decoration: underline;" href="https://www.leeds.gov.uk/campaign/warm-spaces">here</a>.</p>
+    <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">If you or someone you know needs access to food, you can find information in these documents.</p>
     <a target="_blank" style="margin-right: 5px;" href="/leeds/leeds-map.pdf" class="btn btn--brand-h">
       <span class="btn__text">City Centre Map</span>
     </a>
