fixes map api query

--- a/src/partials/need-detail.hbs
+++ b/src/partials/need-detail.hbs
@@ -26,7 +26,7 @@
   \{{#showLocation}}
   <section>
     <h3 class="h2 requests-detail__heading">Location</h3>
-    <iframe frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAUwqpyro0VJKjdb96JS_ejqFuYDg88scg=\{{{postcode}}}" allowfullscreen class="requests-detail__map">
+    <iframe frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAUwqpyro0VJKjdb96JS_ejqFuYDg88scg&q=\{{{postcode}}}" allowfullscreen class="requests-detail__map">
     </iframe>
   </section>
   \{{/showLocation}}
