removes old mhp info

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -28,7 +28,7 @@ page: team
           <div class="team-card">
             <img class="team-card__img" src="/assets/img/mugshots/gary-dunstan.jpg" alt="">
             <h1 class="team-card__heading">Gary Dunstan</h1>
-            <h2 class="team-card__subheading">Co-Founder</h2>
+            <h2 class="team-card__subheading">Co-Founder & CEO</h2>
             <p class="team-card__content">Gary leads on connecting and supporting partnerships in our locations, with a focus on new cities and regions, and around engaging businesses.</p>
             <a href="mailto:gary@streetsupport.net">Contact Gary</a>
           </div>
